[package]
name = "sled-vs-rocksdb"
version = "0.1.0"
authors = ["Pedro Bittencorut Arruda <pedrobittencourt@yahoo.com.br>"]
edition = "2018"

[profile.release]
lto = "thin"
debug = true

[dependencies]
jemallocator = "0.5.4"
rocksdb = { version = "0.24.0", default-features = false, features = ["lz4", "snappy", "bindgen-runtime"] }
sled = { version = "0.34.7", features = ["compression"] }
sled1 = { version = "1.0.0-alpha.124", package = "sled" }
